--- a/css/animations.css
+++ b/css/animations.css
@@ -1,6 +1,6 @@
-/*=======================================
+/*===========================================================
   MENU SECTION ANIMATION
-  =======================================*/
+  ===========================================================*/
 
   .menu {
 	color: #f00;
@@ -23,7 +23,6 @@
 	border: 1px solid #9D9FA2;
 	box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5);
 	border-radius: 6px;
-	/*background-color: #052136;*/
 	cursor: pointer;
 	transition-property: background;
 	transition-duration: .4s;
@@ -36,9 +35,9 @@
 	background-color: rgba(100,65,0,.3);
 }
 
-/*=======================================
+/*==========================================================
   GALLERY SECTION ANIMATION
-  =======================================*/
+  ==========================================================*/
 .photo {
 	position: relative;
 	line-height: 0;
@@ -73,7 +72,7 @@
 	left: 0;
 	padding-left: 20px;
 	padding-right: 20px;
-	justify-content: center; /* For centering text inside .photo-overlay */
+	justify-content: center;
 	align-items: center;
 	background: rgba(0,0,0, .5);
 }
@@ -83,9 +82,9 @@
 	margin-top: 5%;
 }
 
-/* ================================= 
+/* ================================================ 
   Photo Overlay Transitions
-==================================== */
+=================================================== */
 
 .photo-overlay {
 	opacity: 0;
